Idea2 With Feedback (#12)
* add bib yaml

* add image directory to whitelist

* final rmd for refs

* enable numbering

* text reference abstract

* text reference abstract

* making a summer veggie

* revised with suggestions from cory amanda

* fixing a reference and merge conflicts

* final edits

--- a/01.Rmd
+++ b/01.Rmd
@@ -1,5 +1,9 @@
 # Smart-Optimize my LinkedIn and Get Found by Recruiters {#smarter-jobseeking}
 
+#### Abstract {-}
+
+(ref:abs1)
+
 #### Keywords {-}
 
 LinkedIn profile, machine learning, optimze online presence
