--- a/02.Rmd
+++ b/02.Rmd
@@ -7,24 +7,26 @@ hydroponics, machine learning, recommendation algorithms, crowd sourced, Kelpie
 
 ## Undeniable Bond with Mother Earth
 
-35% of all households in America are growing food at home or in a community garden [@noauthor_national_nodate], up 63% in the past decade in younger households. [@noauthor_national_nodate] Despite the flourishing enthusiasm for home gardens, many folks do not have access to a plot of land or care to keep gallons of soil in their apartment. Hydroponics, an alternative to backyard gardening, has been gaining momentum for hobbiests, but the cost and knowledge gap so far has prevented it from commonly rooting in households. 
+The NGA quotes that 35% of all households in America are growing food at home or in a community garden, up 63% in the past decade in younger millennial households [@national_gardening_association_national_nodate].  Despite the flourishing enthusiasm for home gardens, many folks do not have access to a plot of land - 35% of households in the US are renters and large cities like New York City have 45% of residents living in apartments [@nmhc_quick_nodate].
 
-Given the right knowledge and tools, hydroponics could grow fuller any-season plants cheaper than traditional methods. Part of the reason is that it can be optimized to deliver the ideal blend of macro and micro nutrients given controlled environmental factors. However, the margin of error for hydroponic gardening is small, and the knowledge associated has many complex dimensions which are not well documented or available. 
+Hydroponics, the method of growing plants without soil in a compact or vertical space is an alternative to traditional backyard gardening. It has been gaining momentum for hobbyists, but the cost and knowledge gap thus far has prevented it from commonly rooting in households. However, given the right knowledge and tools, hydroponics could grow fuller any-season plants cheaper than traditional methods. Part of the reason is that it can be optimized to deliver the ideal blend of macro and micro nutrients given controlled environmental factors. However, the margin of error for hydroponic gardening is tiny, and the knowledge associated has many complex dimensions which are not well documented or available. 
 
 The solution is Kelpie - a smart gardening unit that uses massive amounts of crowd sourced hydroponic data and data science to prescribe a curated hydroponic grow process for the avid gardener. 
 
 ## Kelpie, the Bridge and the Guide
 
-With Kelpie, we can optimize yields for the best crops to affordabily grow produce in anyone's living quarters. Kelpie is a submergable device which collects your environmental data and syncs via wifi to your smartphone. Growers can take pride and pictures of the lifecycle of their harvest and share it with the broader community.
+With Kelpie, we can optimize yields for the best, affordable crops to grow produce in anyone's living quarters. Kelpie is a submersible device which collects your environmental data and syncs via wifi to your smartphone. Growers can take pride and pictures of the lifecycle of their harvest and share it with the broader community, effortlessly compiling beautiful grow journals - a FitBit+Instagram for plants.
 
-The Kelpie device collects data about your environment, e.g. ambient temperature ranges, humidity and light cycles. It will also collect advanced scientific measurements on your tap water, e.g. pH and mineral or chemical levels. Through the Kelpie app, you can specify your plant preferences, e.g. lushy greens or sweet tomatoes, and your preferred harvest schedules, e.g. a little a week or a full harvest every two months. You can also specify via the app what kinds of compost you have available to brew the perfect organic fertilizer from your household compost, e.g. used coffee grounds or egg shells. 
+The Kelpie device collects data about your environment, e.g. ambient temperature ranges, humidity and light cycles. It will also collect advanced scientific measurements on your tap water, e.g. pH and mineral or chemical levels (TDS). Through the Kelpie app, you can specify your plant preferences, e.g. lushy greens or sweet tomatoes, and your preferred harvest schedules, e.g. a little a week or a full harvest every two months. You can also specify via the app what kinds of compost you have available to brew the perfect organic fertilizer from your household compost, e.g. used coffee grounds or egg shells. 
 
-Utilizing all these inputs, the Kelpie RainCloud algorithm will construct the perfect hydroponic gardening guide for each user. New hydroponic gardeners can order their personalized beginner Kelpie kit, which includes all the equipment and seeds you need to start growing immediately. Kelpie will remind you when the water levels are low, or alert you to add a tablespoon of coffee grounds to lower the acidity of your water. Advanced hydroponic gardeners will have the option to dig deeper and germinate new seeds of knowledge. They can monitor the NPK and trace element ratios in their compost tea, or grow new exotic plants and contributing that growth data to the wider Kelpie community. 
+Utilizing all these inputs, the Kelpie RainCloud algorithm will construct the perfect hydroponic gardening guide for each user. New hydroponic gardeners can order their personalized beginner Kelpie kit, which includes all the equipment and seeds you need to start growing immediately. Kelpie will remind you when the water levels are low, or alert you to add a tablespoon of coffee grounds to lower the acidity of your water. Advanced hydroponic gardeners will have the option to dig deeper and germinate new seeds of knowledge. They can monitor the NPK (Nitrogen-Phosphorus-Potassium) and trace element ratios in their compost tea, or grow new exotic plants and contributing that growth data to the wider Kelpie community. 
 
-The Kelpie Raincloud constantly learns and optimizes new data collected from individual growers. New compost ingredients that are a viable source of plant food are pushed to users to decrease and eliminate costs of buying fertilizer. New plants that are viable to grow under a personalized set of conditions are updated daily. Using machine learning image feature detection, we can detect common health issues with your plants and recommend solutions.  
+The Kelpie Raincloud constantly learns and optimizes new data collected from individual growers. New household compost ingredients that are a viable source of plant food are pushed to users so they can create their own fertilizer blend, eliminating costs of buying fertilizer. New plants that are viable to grow under a personalized set of conditions are updated daily. Using machine learning image-feature detection, we can detect common health issues with your plants and recommend solutions.  
 
 *Success Case Study*
-Nested in a highrise in Downtown Seattle, John is an avid Keurig organics coffee drinker and has a 10 gallon fresh water aquarium. As an intermidiate hydroponics gardner, he was able to brew his own fertilizer tea using his aquarium waste water, coffee grounds and a banana peel. Using Kelpie, he's able to sustain two Super Sweet 100 cherry tomato plants and four heads of romaine - John has a romaine and tomato salad every day for lunch. 
+
+Nested in a high-rise in Downtown Seattle, John is an avid Keurig organics coffee drinker and has a 10 gallon fresh water aquarium. As an intermediate hydroponics gardner, he was able to brew his own fertilizer tea using his aquarium waste water, coffee grounds and a banana peel. Using Kelpie, he's able to sustain two Super Sweet 100 cherry tomato plants and four heads of romaine - John has a romaine and tomato salad every day for lunch. 
+
 
 ## Kelpie and the Future
 
