--- a/references.bib
+++ b/references.bib
@@ -1,10 +1,21 @@
 
-@misc{noauthor_national_nodate,
+@misc{nmhc_quick_nodate,
+	title = {Quick {Facts}: {Resident} {Demographics}{\textbar} {NMHC}.org},
+	shorttitle = {Quick {Facts}},
+	url = {http://www.nmhc.org/Content.aspx?id=4708#Structures},
+	abstract = {How many households rent? What type of properties do they rent? Renter income and demographic characteristics and the number of renters in each state.},
+	urldate = {2018-03-10},
+	journal = {NGO},
+	author = {NMHC, National Housing Council}
+}
+
+@misc{national_gardening_association_national_nodate,
 	title = {National {Gardening} {Association}},
 	url = {https://garden.org/learn/articles/view/3819/},
 	abstract = {Food Gardening in the U.S. at the Highest Levels in More Than a Decade According to New Report},
 	urldate = {2018-02-24},
-	journal = {Garden.Org}
+	journal = {Garden.Org},
+	author = {National Gardening Association, NGA}
 }
 
 @book{labor_statistics_nls_nodate,
