cover page and first v of abstracts

--- a/02.Rmd
+++ b/02.Rmd
@@ -1,5 +1,9 @@
 # Kelpie - Crowd Sourced Smart Hydroponics {#SmartHydro-Kelpie}
 
+#### Abstract {-}
+
+(ref:abs2)
+
 #### Keywords {-}
 
 hydroponics, machine learning, recommendation algorithms, crowd sourced, Kelpie
